cmake_minimum_required(VERSION 3.8)
project(algorithm)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# arrays
#set(yg_algorithm src/category/arrays/DoThreeSumSolution.cpp)
# hash-table
#set(yg_algorithm src/category/hash-table/DoTwoSumSolution.cpp)
# heaps
#set(yg_algorithm src/category/heaps/DoKthLargest.cpp)
# linked-list
#set(yg_algorithm src/category/linked-list/DoMergeTwoListsSolution.cpp)
# queues
#set(yg_algorithm src/category/queues/DoMyStack.cpp)
# stacks
#set(yg_algorithm src/category/stacks/DoEffectiveBracketSolution.cpp)
# strings
#set(yg_algorithm src/category/strings/DoMaxNoDuplicateStringsSolution.cpp)
# trees
#set(yg_algorithm src/category/trees/DoTreeInorderTraversalSolution.cpp)
# graphs
#set(yg_algorithm src/category/graphs/DoFindValidPathSolution.cpp)
# algorithms/binary-search
#set(yg_algorithm src/category/algorithms/binary-search/DoBinarySearchSolution.cpp)
# algorithms/sorting
#set(yg_algorithm src/category/algorithms/sorting/DoMergeTwoArraySolution.cpp)
# algorithms/bucket-sort
#set(yg_algorithm src/category/algorithms/bucket-sort/DoBucketSortSolution.cpp)
# algorithms/counting-sort
#set(yg_algorithm src/category/algorithms/counting-sort/DoCountingSortSolution.cpp)
# algorithms/math
#set(yg_algorithm src/category/algorithms/math/DoPalindromeNumberSolution.cpp)
# algorithms/merge-sort
#set(yg_algorithm src/category/algorithms/merge-sort/DoMergeSortAnArraySolution.cpp)
# trie
set(yg_algorithm src/category/trie/DoLongestCommonPrefixSolution.cpp)

# 产出
add_executable(yg_algorithm ${yg_algorithm})
